[project]
name = "learning-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.108.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.1",
    "streamlit>=1.47.1",
    "tiktoken>=0.11.0",
]
